--- a/jo_app/src/styles/banner.css
+++ b/jo_app/src/styles/banner.css
@@ -11,3 +11,45 @@ h1 {
   padding: 60px;
   margin-top: 0px;
 }
+.search-bar {
+  display: flex;
+  justify-content: center;
+  max-width: 500px;
+  padding: 50px;
+}
+.search-bar input {
+  font-size: 1rem;
+  display: block;
+  width: 100%;
+  height: 56px;
+  border-radius: 5px 0 0px 5px;
+  border-right: none;
+  margin: 0 auto;
+  border: none;
+  background: #ffffff
+    url(https://s3-eu-west-1.amazonaws.com/aws-ec2-eu-1-opendatasoft-staticfileset/paris2024/theme_image/loupe.svg)
+    3px center no-repeat;
+  padding: 8px 150px 8px 42px;
+  box-shadow: 0px 4px 14px 0px rgba(0, 0, 0, 0.15);
+  border-radius: 5px 0px 0px 5px;
+  outline: none;
+}
+.search-bar button {
+  border: none;
+  background-color: #fff;
+  padding: 8px 12px;
+  border-radius: 0 4px 4px 0;
+  transition: opacity 0.2s;
+  cursor: pointer;
+}
+.banner-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+/*resultats*/
+.results {
+  display: flex;
+  flex-direction: column;
+}
