--- a/jo_app/src/styles/header.css
+++ b/jo_app/src/styles/header.css
@@ -13,6 +13,7 @@
   color: white;
   text-decoration: none;
   align-items: center;
+  font-family: 'Paris2024';
 }
 
 .logo p {
@@ -38,7 +39,7 @@
   text-transform: uppercase;
   font-weight: 700;
   line-height: 20px;
-  width: 100px;
+  width: 150px;
   text-align: center;
   list-style-type: none;
 }
@@ -55,6 +56,7 @@
   line-height: 20px;
   text-align: center;
   list-style-type: none;
+  cursor: pointer;
 }
 .nav-links li:hover {
   background: rgba(255, 255, 255, 0.1);
