--- a/jo_app/src/styles/homeMain.css
+++ b/jo_app/src/styles/homeMain.css
@@ -1,9 +1,44 @@
 .features {
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
+  align-items: flex-start; 
   gap: 5vh;
+  margin-bottom: 20vh;
+  padding: 0px 50px;
 }
+
+.feature {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center ;
+  text-decoration: none;
+  color: black;
+
+}
+.feature div {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+
 .feature img {
-  width: 100%;
-  height: 100%;
+  width: 100%; 
+  height: auto; 
+}
+.feature h4{
+  font-size: 24px;
+  font-weight: 900;
+  margin: 10px 0px;
+  color: #000;
+  line-height: 28px;
+  font-family: 'Paris2024';
+
+}
+.feature h4:hover{
+text-decoration: underline;
+}
+.feature p{
+  font-family: 'Paris2024';
+
 }
